--- a/myapp/templates/as1.html
+++ b/myapp/templates/as1.html
@@ -14,6 +14,15 @@
         <input type="text" name=" " value=" "><br><br>
         <input type="submit" value="Submit">
     </form>
+    <form action="/action_page.php">
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name" value=""><br>
+        <label for="name">Products:</label><br>
+        <input type="text" name=" " value=" "><br>
+        <label type="name">Discription:</label><br>
+        <input type="text" name=" " value=" "><br><br>
+        <input type="submit" value="Submit">
+    </form>
 </body>
 
 </html>
