--- a/myapp/templates/as1.html
+++ b/myapp/templates/as1.html
@@ -14,7 +14,7 @@
         <input type="text" name=" " value=" "><br><br>
         <input type="submit" value="Submit">
     </form>
-    <form action="/action_page.php">
+    {% comment %} <form action="/action_page.php">
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name" value=""><br>
         <label for="name">Products:</label><br>
@@ -22,7 +22,7 @@
         <label type="name">Discription:</label><br>
         <input type="text" name=" " value=" "><br><br>
         <input type="submit" value="Submit">
-    </form>
+    </form> {% endcomment %}
 </body>
 
 </html>
